--- a/src/app/magic/VPRDO011_Color_Table_Maint/COLOR_TABLE_MAINT/COLOR_TABLE_MAINT.component.css
+++ b/src/app/magic/VPRDO011_Color_Table_Maint/COLOR_TABLE_MAINT/COLOR_TABLE_MAINT.component.css
@@ -5,42 +5,42 @@
 }
 
 .mat-mdc-cell:first-child{
-    flex: 0 0 18%;
+    flex: 0 0 16%;
     padding-left: 2px;
 }
 .mat-mdc-header-cell:first-child{
-    flex: 0 0 18%;
+    flex: 0 0 16%;
     padding-left: 2px;
 }
 .mat-mdc-cell:nth-child(2){
-  flex: 0 0 18%;
+  flex: 0 0 26%;
   padding-left: 2px;
 }
 .mat-mdc-header-cell:nth-child(2){
-  flex: 0 0 18%;
+  flex: 0 0 26%;
   padding-left: 2px;
 }
 .mat-mdc-cell:nth-child(3){
-  flex: 0 0 18%;
+  flex: 0 0 16%;
   padding-left: 2px;
 }
 .mat-mdc-header-cell:nth-child(3){
-  flex: 0 0 18%;
+  flex: 0 0 16%;
   padding-left: 2px;
 }
 .mat-mdc-cell:nth-child(4){
-  flex: 0 0 18%;
+  flex: 0 0 16%;
   padding-left: 2px;
 }
 .mat-mdc-header-cell:nth-child(4){
-  flex: 0 0 18%;
+  flex: 0 0 16%;
   padding-left: 2px;
 }
 .mat-mdc-cell:nth-child(5){
-  flex: 0 0 18%;
+  flex: 0 0 16%;
   padding-left: 2px;
 }
 .mat-mdc-header-cell:nth-child(5){
-  flex: 0 0 18%;
+  flex: 0 0 16%;
   padding-left: 2px;
 }
